--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -33,12 +33,13 @@
   "homepage": "https://github.com/Munter/tolk",
   "dependencies": {
     "accord": "^0.18.0",
+    "autoprefixer-core": "^5.2.0",
     "inline-source-map-comment": "^1.0.5",
+    "postcss": "^4.1.11",
     "when": "^3.7.2"
   },
   "devDependencies": {
     "LiveScript": "1.3.1",
-    "autoprefixer-core": "^5.2.0",
     "babel": "^5.4.7",
     "coco": "0.9.1",
     "coffee-script": "1.9.1",
