--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "description": "A file reader that promises to translate non-web assets to web assets given the available transpilers, sourcemaps and all",
   "main": "lib/tolk.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "lint": "jshint .",
     "test": "npm run lint && mocha",
