--- a/packages/baby-tolk/.travis.yml
+++ b/packages/baby-tolk/.travis.yml
@@ -6,5 +6,6 @@ cache:
 node_js:
   - "0.10"
   - "0.12"
+  - "iojs"
 script: "npm run-script travis"
 after_success: "<coverage/lcov.info ./node_modules/coveralls/bin/coveralls.js"
