--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -57,10 +57,9 @@
     "mocha": "^2.1.0",
     "mocha-lcov-reporter": "0.0.1",
     "myth": "1.3.0",
-    "node-sass": "^2.1.1",
+    "node-sass": "^3.3.3",
     "stylus": "0.50.0",
     "swig": "1.4.2",
-    "unexpected": "^7.5.1",
-    "unexpected-promise": "^1.1.1"
+    "unexpected": "^9.16.0"
   }
 }
