--- a/packages/baby-tolk/.travis.yml
+++ b/packages/baby-tolk/.travis.yml
@@ -9,3 +9,11 @@ node_js:
   - "iojs"
 script: "npm run-script travis"
 after_success: "<coverage/lcov.info ./node_modules/coveralls/bin/coveralls.js"
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/660ac4e0e05fc81e3d16
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
