--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tolk",
-  "version": "1.1.3",
+  "name": "baby-tolk",
+  "version": "1.0.0",
   "description": "A file reader that promises to translate non-web assets to web assets given the available transpilers, sourcemaps and all",
-  "main": "lib/tolk.js",
+  "main": "lib/baby-tolk.js",
   "files": [
     "lib"
   ],
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Munter/tolk.git"
+    "url": "https://github.com/davej/baby-tolk.git"
   },
   "keywords": [
     "web",
@@ -28,18 +28,18 @@
     "less",
     "stylus"
   ],
-  "author": "Peter Müller <munter@fumle.dk>",
+  "contributors": [
+    "Dave Jeffery <dave@davejeffery.com>",
+    "Peter Müller <munter@fumle.dk>",
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Munter/tolk/issues"
+    "url": "https://github.com/davej/baby-tolk/issues"
   },
-  "homepage": "https://github.com/Munter/tolk",
+  "homepage": "https://github.com/davej/baby-tolk",
   "dependencies": {
     "accord": "0.20.3",
-    "autoprefixer": "6.0.3",
     "es6-promise": "3.0.2",
-    "inline-source-map-comment": "1.0.5",
-    "postcss": "5.0.10",
     "when": "3.7.3"
   },
   "devDependencies": {
