Invalid pacakage.json

--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -30,7 +30,7 @@
   ],
   "contributors": [
     "Dave Jeffery <dave@davejeffery.com>",
-    "Peter Müller <munter@fumle.dk>",
+    "Peter Müller <munter@fumle.dk>"
   ],
   "license": "MIT",
   "bugs": {
