--- a/packages/piggy-in-the-middle/package.json
+++ b/packages/piggy-in-the-middle/package.json
@@ -9,6 +9,14 @@
   },
   "author": "Dave Jeffery <dave@davejeffery.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/davej/piggy-in-the-middle/issues"
+  },
+  "homepage": "https://github.com/davej/piggy-in-the-middle",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/davej/piggy-in-the-middle.git"
+  },
   "dependencies": {
     "baby-tolk": "^1.1.0",
     "chokidar": "^1.2.0",
