Now works with ES5 and older versions of node (>= 0.10)

--- a/packages/piggy-in-the-middle/.jshintrc
+++ b/packages/piggy-in-the-middle/.jshintrc
@@ -39,7 +39,7 @@
     "debug"         : false,     // true: Allow debugger statements e.g. browser breakpoints.
     "eqnull"        : false,     // true: Tolerate use of `== null`
     //"es5"           : true,     // true: Allow ES5 syntax (ex: getters and setters)
-    "esnext"        : true,     // true: Allow ES.next (ES6) syntax (ex: `const`)
+    "esnext"        : false,     // true: Allow ES.next (ES6) syntax (ex: `const`)
                                  // (ex: `for each`, multiple try/catch, function expression…)
     "evil"          : false,     // true: Tolerate use of `eval` and `new Function()`
     "expr"          : false,     // true: Tolerate `ExpressionStatement` as Programs
