--- a/packages/piggy-in-the-middle/package.json
+++ b/packages/piggy-in-the-middle/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/davej/piggy-in-the-middle.git"
   },
   "dependencies": {
+    "array.prototype.find": "^1.0.0",
     "baby-tolk": "^1.1.0",
     "chokidar": "^1.2.0",
     "mime": "^1.3.4",
