--- a/packages/piggy-in-the-middle/package.json
+++ b/packages/piggy-in-the-middle/package.json
@@ -21,6 +21,8 @@
     "array.prototype.find": "^1.0.0",
     "baby-tolk": "^1.1.0",
     "chokidar": "^1.2.0",
+    "csserror": "^2.0.0",
+    "jserror": "^1.0.0",
     "mime": "^1.3.4",
     "when": "^3.7.3"
   },
