Updating to patched version of accord while waiting for PR to be accepted

--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -38,7 +38,7 @@
   },
   "homepage": "https://github.com/davej/baby-tolk",
   "dependencies": {
-    "accord": "0.20.3",
+    "accord": "davej/accord#patch-1-build",
     "clean-css": "3.4.6",
     "es6-promise": "3.0.2",
     "html-minifier": "1.0.0",
