--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -42,6 +42,7 @@
     "clean-css": "3.4.6",
     "es6-promise": "3.0.2",
     "html-minifier": "1.0.0",
+    "node-sass": "3.4.2",
     "uglify-js": "2.5.0",
     "when": "3.7.3"
   },
