--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -39,31 +39,31 @@
   "homepage": "https://github.com/davej/baby-tolk",
   "dependencies": {
     "accord": "davej/accord#patch-1-build",
-    "clean-css": "3.4.9",
-    "es6-promise": "3.0.2",
-    "html-minifier": "1.0.0",
-    "uglify-js": "2.6.1",
-    "when": "3.7.5"
+    "clean-css": "^3.4.9",
+    "es6-promise": "^3.0.2",
+    "html-minifier": "^1.1.0",
+    "uglify-js": "^2.6.1",
+    "when": "^3.7.5"
   },
   "devDependencies": {
-    "LiveScript": "1.3.1",
-    "babel": "5.8.29",
-    "coco": "0.9.1",
-    "coffee-script": "1.10.0",
-    "coveralls": "2.11.6",
-    "css-parse": "2.0.0",
-    "dogescript": "2.3.0",
-    "istanbul": "0.4.1",
-    "jade": "1.11.0",
-    "jshint": "2.9.1-rc1",
-    "less": "2.5.3",
-    "marked": "0.3.5",
-    "mocha": "2.3.4",
-    "mocha-lcov-reporter": "1.0.0",
-    "myth": "1.5.0",
-    "node-sass": "3.4.2",
-    "stylus": "0.52.4",
-    "swig": "1.4.2",
-    "unexpected": "10.5.0"
+    "LiveScript": "^1.3.1",
+    "babel": "^5.8.29",
+    "coco": "^0.9.1",
+    "coffee-script": "^1.10.0",
+    "coveralls": "^2.11.6",
+    "css-parse": "^2.0.0",
+    "dogescript": "^2.3.0",
+    "istanbul": "^0.4.1",
+    "jade": "^1.11.0",
+    "jshint": "^2.9.1-rc1",
+    "less": "^2.5.3",
+    "marked": "^0.3.5",
+    "mocha": "^2.3.4",
+    "mocha-lcov-reporter": "^1.0.0",
+    "myth": "^1.5.0",
+    "node-sass": "^3.4.2",
+    "stylus": "^0.52.4",
+    "swig": "^1.4.2",
+    "unexpected": "^10.4.0"
   }
 }
