--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -38,7 +38,7 @@
   },
   "homepage": "https://github.com/davej/baby-tolk",
   "dependencies": {
-    "accord": "davej/accord#patch-1-build",
+    "accord": "0.22.3",
     "clean-css": "3.4.12",
     "es6-promise": "^3.0.2",
     "html-minifier": "2.1.0",
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "LiveScript": "^1.3.1",
-    "babel": "^5.8.29",
+    "babel": "5.8.38",
     "coco": "^0.9.1",
     "coffee-script": "^1.10.0",
     "coveralls": "^2.11.6",
