--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -38,15 +38,16 @@
   },
   "homepage": "https://github.com/davej/baby-tolk",
   "dependencies": {
-    "accord": "0.22.3",
-    "clean-css": "3.4.12",
-    "html-minifier": "2.1.0",
+    "accord": "0.24.1",
+    "clean-css": "3.4.17",
+    "html-minifier": "2.1.3",
     "uglify-js": "^2.6.1",
     "when": "^3.7.5"
   },
   "devDependencies": {
     "LiveScript": "^1.3.1",
-    "babel": "5.8.38",
+    "babel": "6.5.2",
+    "babel-preset-es2015": "6.9.0",
     "coco": "^0.9.1",
     "coffee-script": "^1.10.0",
     "coveralls": "^2.11.6",
@@ -60,9 +61,9 @@
     "mocha": "^2.3.4",
     "mocha-lcov-reporter": "^1.0.0",
     "myth": "^1.5.0",
-    "node-sass": "3.6.0",
+    "node-sass": "3.7.0",
     "stylus": "0.54.5",
     "swig": "^1.4.2",
-    "unexpected": "10.13.2"
+    "unexpected": "10.13.3"
   }
 }
