--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -46,7 +46,7 @@
   },
   "devDependencies": {
     "LiveScript": "^1.3.1",
-    "babel": "6.5.2",
+    "babel-core": "6.9.1",
     "babel-preset-es2015": "6.9.0",
     "coco": "^0.9.1",
     "coffee-script": "^1.10.0",
