--- a/packages/piggy-in-the-middle/package.json
+++ b/packages/piggy-in-the-middle/package.json
@@ -18,9 +18,9 @@
     "url": "https://github.com/davej/piggy-in-the-middle.git"
   },
   "dependencies": {
-    "array.prototype.find": "^1.0.0",
-    "baby-tolk": "^2.0.1",
-    "chokidar": "^1.2.0",
+    "array.prototype.find": "^2.0.0",
+    "baby-tolk": "^4.0.0",
+    "chokidar": "^1.5.2",
     "csserror": "^2.0.0",
     "jserror": "^1.0.0",
     "mime": "^1.3.4",
@@ -32,14 +32,15 @@
     "express": "^4.13.3",
     "instant": "^1.10.1",
     "jade": "^1.11.0",
-    "messy": "^6.6.2",
-    "mocha": "^2.3.3",
-    "serve-static": "^1.10.0",
-    "sinon": "^1.17.1",
-    "stylus": "^0.53.0",
-    "unexpected": "^10.0.1",
-    "unexpected-express": "^8.0.0",
-    "unexpected-messy": "^5.0.0",
-    "unexpected-sinon": "^10.0.0"
+    "magicpen-media": "^1.5.1",
+    "messy": "^6.10.0",
+    "mocha": "^2.5.3",
+    "serve-static": "^1.11.1",
+    "sinon": "^1.17.4",
+    "stylus": "^0.54.5",
+    "unexpected": "^10.13.3",
+    "unexpected-express": "^8.2.0",
+    "unexpected-messy": "^6.1.1",
+    "unexpected-sinon": "^10.2.1"
   }
 }
