To compile babel files use 'babel.js' extension

--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -42,6 +42,7 @@
     "app-module-path": "1.1.0",
     "clean-css": "^3.4.18",
     "html-minifier": "^2.1.3",
+    "path-complete-extname": "0.1.0",
     "uglify-js": "^2.7.0",
     "when": "^3.7.5"
   },
