--- a/packages/baby-tolk/package.json
+++ b/packages/baby-tolk/package.json
@@ -41,7 +41,7 @@
     "accord": "^0.26.0",
     "app-module-path": "1.1.0",
     "clean-css": "^3.4.18",
-    "html-minifier": "^2.1.3",
+    "html-minifier": "3.0.3",
     "path-complete-extname": "0.1.0",
     "uglify-js": "^2.7.0",
     "when": "^3.7.5"
@@ -60,12 +60,12 @@
     "jshint": "^2.9.1-rc1",
     "less": "^2.5.3",
     "marked": "^0.3.5",
-    "mocha": "^2.3.4",
+    "mocha": "3.0.2",
     "mocha-lcov-reporter": "^1.0.0",
     "myth": "^1.5.0",
     "node-sass": "^3.8.0",
     "stylus": "^0.54.5",
     "swig": "^1.4.2",
-    "unexpected": "10.13.3"
+    "unexpected": "10.17.2"
   }
 }
