--- a/packages/piggy-in-the-middle/package.json
+++ b/packages/piggy-in-the-middle/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/davej/piggy-in-the-middle.git"
   },
   "dependencies": {
-    "baby-tolk": "^4.1.1",
+    "baby-tolk": "^5.0.2",
     "chokidar": "^1.6.0",
     "csserror": "^2.0.2",
     "jserror": "^1.0.0",
@@ -26,6 +26,7 @@
     "when": "^3.7.3"
   },
   "devDependencies": {
+    "@davej/instant": "^2.0.0",
     "coffee-script": "^1.10.0",
     "connect": "^3.4.0",
     "express": "^4.13.3",
@@ -34,6 +35,7 @@
     "magicpen-media": "^1.5.1",
     "messy": "^6.10.0",
     "mocha": "^2.5.3",
+    "node-sass": "^3.13.1",
     "serve-static": "^1.11.1",
     "sinon": "^1.17.4",
     "stylus": "^0.54.5",
