--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,12 +20,17 @@
   },
   "devDependencies": {
     "babel": "^6.23.0",
+    "child-process-promise": "^2.2.1",
+    "lerna": "2.0.0-beta.38",
     "marked": "^0.3.6",
+    "mocha": "^3.2.0",
+    "node-fetch": "^1.6.3",
     "node-sass": "^4.5.2",
-    "lerna": "2.0.0-beta.38"
+    "rimraf": "^2.6.1",
+    "unexpected": "^10.26.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "bin": {
     "pingy": "./cli.js"
