--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "install": "lerna bootstrap"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
     "lerna": "^2.0.0-rc.1"
   }
 }
