--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,11 +7,15 @@
     "@pingy/export": "^3.0.0",
     "@pingy/instant": "^3.0.0",
     "@pingy/middleware": "^3.0.0",
+    "@pingy/scaffold": "^4.0.0",
+    "archy": "^1.0.0",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "connect": "^3.6.0",
+    "find-up": "^2.1.0",
     "get-port": "^3.1.0",
     "inquirer": "^3.0.6",
+    "opn": "^4.0.2",
     "ora": "^1.2.0",
     "serve-static": "^1.12.1",
     "server-destroy": "^1.0.1",
