--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -25,8 +25,9 @@
     "detab": "^1.0.2",
     "markup-js": "^1.5.21",
     "mkdirp": "^0.5.1",
+    "mz": "^2.6.0",
     "normalize.css": "^5.0.0",
-    "q": "^1.4.1"
+    "thenify": "^3.2.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.12",
