set engine to node >= 6

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,6 +36,8 @@
   "scripts": {
     "test": "mocha"
   },
+  "engines" : { "node" : ">=6" },
+  "engineStrict" : true,
   "bin": {
     "pingy": "./cli.js"
   },
