--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -8,6 +8,8 @@
     "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "travis": "npm run coverage"
   },
+  "engines" : { "node" : ">=6" },
+  "engineStrict" : true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/davej/barnyard.git"
