--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,6 +17,7 @@
     "inquirer": "^3.0.6",
     "opn": "^4.0.2",
     "ora": "^1.2.0",
+    "semver": "^5.3.0",
     "serve-static": "^1.12.1",
     "server-destroy": "^1.0.1",
     "turbo-logo": "^0.3.1",
