--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,11 @@
 environment:
   matrix:
   - nodejs_version: "6"
-  - nodejs_version: "7"
+  - nodejs_version: "8"
 
 install:
   - ps: Install-Product node $env:nodejs_version
-  - npm install --force
+  - npm install
 
 test_script:
   - node --version
