--- a/packages/compile/package.json
+++ b/packages/compile/package.json
@@ -64,7 +64,7 @@
     "jshint": "^2.9.1-rc1",
     "less": "^2.5.3",
     "marked": "^0.3.5",
-    "mocha": "3.0.2",
+    "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.0.0",
     "myth": "^1.5.0",
     "node-sass": "^4.5.0",
