--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -27,7 +27,8 @@
     "csserror": "^2.0.2",
     "jserror": "^1.0.0",
     "mime": "^1.3.4",
-    "when": "^3.7.3"
+    "when": "^3.7.3",
+    "upath": "^1.0.0"
   },
   "devDependencies": {
     "@pingy/instant": "^3.0.1",
