Accord: fix publish config

--- a/packages/accord/package.json
+++ b/packages/accord/package.json
@@ -79,5 +79,8 @@
     "coverage": "mocha && ./node_modules/.bin/istanbul report && open coverage/lcov-report/index.html",
     "coveralls": "istanbul report && cat ./coverage/lcov.info | coveralls",
     "test": "mocha test/test.js"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
