--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,6 +12,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "connect": "^3.6.0",
+    "express-autoprefixer": "^5.1.1",
     "find-up": "^2.1.0",
     "get-port": "^3.1.0",
     "inquirer": "^3.1.0",
