--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "lerna": "^2.0.0-rc.4"
   }
 }
