--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,15 +9,17 @@
     "@pingy/middleware": "^3.1.7",
     "@pingy/scaffold": "^5.2.2",
     "archy": "^1.0.0",
+    "autoprefixer": "^6.7.7",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "connect": "^3.6.0",
-    "express-autoprefixer": "^5.1.1",
+    "express-autoprefixer": "^5.2.0",
     "find-up": "^2.1.0",
     "get-port": "^3.1.0",
     "inquirer": "^3.1.0",
     "opn": "^5.1.0",
     "ora": "^1.2.0",
+    "postcss": "^5.2.17",
     "semver": "^5.3.0",
     "serve-static": "^1.12.1",
     "server-destroy": "^1.0.1",
@@ -27,13 +29,17 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "child-process-promise": "^2.2.1",
+    "chromedriver": "^2.30.1",
+    "friendly-webdriver": "^2.0.0",
     "lerna": "2.0.0-beta.38",
     "marked": "^0.3.6",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
     "node-fetch": "^1.6.3",
     "node-sass": "^4.5.2",
     "rimraf": "^2.6.1",
-    "unexpected": "^10.26.3"
+    "unexpected": "^10.26.3",
+    "unexpected-webdriver": "^2.0.0"
   },
   "scripts": {
     "test": "mocha"
