--- a/packages/compile/package.json
+++ b/packages/compile/package.json
@@ -50,6 +50,7 @@
     "path-complete-extname": "0.1.0",
     "postcss": "6.0.1",
     "uglify-js": "^2.7.0",
+    "upath": "1.0.0",
     "when": "^3.7.5"
   },
   "devDependencies": {
