--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^6.7.7",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "configstore": "^3.1.1",
     "connect": "^3.6.0",
     "express-autoprefixer": "^5.2.0",
     "find-up": "^2.1.0",
