--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/davej/barnyard#readme",
   "dependencies": {
+    "@pingy/scaffold-primitive": "^1.0.0",
     "babel-polyfill": "^6.16.0",
     "checkdir": "^1.1.0",
     "deep-extend": "^0.4.1",
@@ -31,7 +32,8 @@
     "mkdirp": "^0.5.1",
     "mz": "^2.6.0",
     "normalize.css": "^5.0.0",
-    "thenify": "^3.2.1"
+    "thenify": "^3.2.1",
+    "upath": "^1.0.0"
   },
   "devDependencies": {
     "coveralls": "^2.11.12",
@@ -39,6 +41,7 @@
     "mocha": "^3.3.0",
     "mocha-lcov-reporter": "^1.0.0",
     "rimraf": "^2.5.4",
+    "supersniff": "^1.1.0",
     "unexpected": "^10.15.0"
   }
 }
