--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,6 @@
     "@pingy/instant": "^3.1.3",
     "@pingy/middleware": "^3.2.3",
     "@pingy/scaffold": "^5.2.4",
-    "archy": "^1.0.0",
     "autoprefixer": "^6.7.7",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
@@ -24,7 +23,9 @@
     "semver": "^5.3.0",
     "serve-static": "^1.12.1",
     "server-destroy": "^1.0.1",
+    "tree-from-paths": "^1.0.0",
     "turbo-logo": "^0.3.1",
+    "upath": "^1.0.0",
     "valid-filename": "^2.0.1"
   },
   "devDependencies": {
