--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,43 +8,38 @@
     "@pingy/instant": "^3.1.4",
     "@pingy/middleware": "^3.2.4",
     "@pingy/scaffold": "^6.0.0",
-    "autoprefixer": "^6.7.7",
-    "chalk": "^1.1.3",
-    "commander": "^2.9.0",
+    "autoprefixer": "^7.1.5",
+    "chalk": "^2.1.0",
+    "colors": "^1.1.2",
+    "commander": "^2.11.0",
     "configstore": "^3.1.1",
-    "connect": "^3.6.0",
+    "connect": "^3.6.5",
     "express-autoprefixer": "^5.2.0",
     "find-up": "^2.1.0",
-    "get-port": "^3.1.0",
-    "inquirer": "^3.1.0",
+    "get-port": "^3.2.0",
+    "inquirer": "^3.3.0",
     "opn": "^5.1.0",
-    "ora": "^1.2.0",
-    "postcss": "^5.2.17",
-    "semver": "^5.3.0",
-    "serve-static": "^1.12.1",
+    "ora": "^1.3.0",
+    "postcss": "^6.0.13",
+    "semver": "^5.4.1",
+    "serve-static": "^1.13.1",
     "server-destroy": "^1.0.1",
     "tree-from-paths": "^1.0.0",
-    "turbo-logo": "^0.3.1",
-    "upath": "^1.0.0",
-    "valid-filename": "^2.0.1"
+    "upath": "^1.0.0"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
     "child-process-promise": "^2.2.1",
-    "chromedriver": "^2.30.1",
+    "chromedriver": "^2.33.0",
     "friendly-webdriver": "^2.0.0",
-    "lerna": "2.0.0-beta.38",
-    "marked": "^0.3.6",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.2.0",
-    "node-fetch": "^1.6.3",
-    "node-sass": "^4.5.2",
-    "rimraf": "^2.6.1",
-    "unexpected": "^10.26.3",
+    "mocha": "^4.0.1",
+    "node-fetch": "^1.7.3",
+    "rimraf": "^2.6.2",
+    "unexpected": "^10.36.0",
     "unexpected-webdriver": "^2.0.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --exit"
   },
   "engines": {
     "node": ">=6"
