--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -24,24 +24,20 @@
   "homepage": "https://github.com/davej/barnyard#readme",
   "dependencies": {
     "@pingy/scaffold-primitive": "^1.0.1",
-    "babel-polyfill": "^6.16.0",
+    "babel-polyfill": "^6.26.0",
     "checkdir": "^1.1.0",
-    "deep-extend": "^0.4.1",
-    "detab": "^1.0.2",
-    "markup-js": "^1.5.21",
     "mkdirp": "^0.5.1",
-    "mz": "^2.6.0",
-    "normalize.css": "^5.0.0",
-    "thenify": "^3.2.1",
+    "normalize.css": "^7.0.0",
     "upath": "^1.0.0"
   },
   "devDependencies": {
-    "coveralls": "^2.11.12",
+    "babel-core": "^6.26.0",
+    "coveralls": "^3.0.0",
     "istanbul": "^0.4.4",
-    "mocha": "^3.3.0",
+    "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.0.0",
-    "rimraf": "^2.5.4",
+    "rimraf": "^2.6.2",
     "supersniff": "^1.1.0",
-    "unexpected": "^10.15.0"
+    "unexpected": "^10.36.0"
   }
 }
