[scaffold] @pingy/scaffold -> @pingy/init

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,7 +7,7 @@
     "@pingy/export": "^5.0.1",
     "@pingy/instant": "^3.2.0",
     "@pingy/middleware": "^4.0.1",
-    "@pingy/scaffold": "^6.0.1",
+    "@pingy/init": "^6.0.1",
     "autoprefixer": "^7.1.6",
     "chalk": "^2.3.0",
     "colors": "^1.1.2",
