--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,20 +8,22 @@
     "@pingy/init": "^6.0.1",
     "@pingy/instant": "^3.2.0",
     "@pingy/middleware": "^4.0.1",
+    "@pingy/scaffold": "^7.0.0",
     "@pingy/scaffold-primitive": "^1.0.2",
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^6.7.7",
     "chalk": "^2.3.0",
     "colors": "^1.1.2",
     "commander": "^2.11.0",
     "configstore": "^3.1.1",
     "connect": "^3.6.5",
+    "cross-spawn": "^5.1.0",
     "express-autoprefixer": "^5.3.0",
     "find-up": "^2.1.0",
     "get-port": "^3.2.0",
     "inquirer": "^3.3.0",
     "opn": "^5.1.0",
     "ora": "^1.3.0",
-    "postcss": "^6.0.13",
+    "postcss": "^5.2.18",
     "semver": "^5.4.1",
     "serve-static": "^1.13.1",
     "server-destroy": "^1.0.1",
