[accord, compile, middleware] Update node-sass

--- a/packages/compile/package.json
+++ b/packages/compile/package.json
@@ -70,7 +70,7 @@
     "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.0.0",
     "myth": "^1.5.0",
-    "node-sass": "^4.5.0",
+    "node-sass": "4.6.1",
     "stylus": "^0.54.5",
     "swig": "^1.4.2",
     "unexpected": "10.17.2"
