--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "lerna": "2.2.0",
-  "packages": [
-    "packages/*"
-  ],
+  "lerna": "2.5.1",
+  "packages": ["packages/*"],
   "version": "independent"
 }
