Add web scaffolding feature

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,14 +1,41 @@
 {
   "name": "@pingy/cli",
   "version": "0.10.4",
-  "description": "",
+  "description":
+    "The Simple Frontend Build Tool. No Configuration, No Plugins. ",
   "main": "index.js",
+  "keywords": [
+    "frontend",
+    "html",
+    "css",
+    "js",
+    "minify",
+    "minification",
+    "sourcemaps",
+    "source-maps",
+    "sass",
+    "less",
+    "stylus",
+    "build-tool",
+    "website",
+    "pingy-cli",
+    "babel",
+    "coffeescript",
+    "buble",
+    "ejs",
+    "pug",
+    "pingy",
+    "gulp",
+    "grunt",
+    "brunch"
+  ],
   "dependencies": {
     "@pingy/export": "^5.0.3",
     "@pingy/init": "^7.0.0",
     "@pingy/instant": "^3.2.1",
     "@pingy/middleware": "^4.1.1",
     "@pingy/scaffold": "^8.1.0",
+    "@pingy/scaffold-middleware": "^0.0.0",
     "@pingy/scaffold-primitive": "^2.0.0",
     "autoprefixer": "^6.7.7",
     "chalk": "^2.3.0",
@@ -17,6 +44,7 @@
     "configstore": "^3.1.1",
     "connect": "^3.6.5",
     "cross-spawn": "^5.1.0",
+    "express": "^4.16.2",
     "express-autoprefixer": "^5.3.0",
     "find-up": "^2.1.0",
     "get-port": "^3.2.0",
