--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@pingy/cli",
-  "version": "0.10.4",
-  "description":
-    "The Simple Frontend Build Tool. No Configuration, No Plugins. ",
+  "version": "0.11.0",
+  "description": "The Simple Frontend Build Tool. No Configuration, No Plugins. ",
   "main": "index.js",
   "keywords": [
     "frontend",
@@ -31,12 +30,12 @@
   ],
   "dependencies": {
     "@pingy/export": "^5.0.3",
-    "@pingy/init": "^7.0.0",
+    "@pingy/init": "^7.0.1",
     "@pingy/instant": "^3.2.1",
     "@pingy/middleware": "^4.1.1",
-    "@pingy/scaffold": "^8.1.0",
-    "@pingy/scaffold-middleware": "^0.0.0",
-    "@pingy/scaffold-primitive": "^2.0.0",
+    "@pingy/scaffold": "^9.0.0",
+    "@pingy/scaffold-middleware": "^0.1.0",
+    "@pingy/scaffold-primitive": "^2.1.0",
     "autoprefixer": "^6.7.7",
     "chalk": "^2.3.0",
     "colors": "^1.1.2",
