--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -3,8 +3,9 @@
   "version": "9.0.0",
   "description": "Scaffold a Pingy project from Github or local filesystem",
   "main": "index.js",
+  "files": ["index.js"],
   "scripts": {
-    "test": "mocha"
+    "test": "preview && mocha"
   },
   "author": "Dave Jeffery <dave@davejeffery.com>",
   "license": "MIT",
@@ -27,6 +28,7 @@
     "dotenv": "^4.0.0",
     "mocha": "^4.0.1",
     "mocha.parallel": "^0.15.3",
+    "package-preview": "^1.0.1",
     "unexpected": "^10.36.2"
   }
 }
