--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,6 +48,7 @@
     "find-up": "^2.1.0",
     "get-port": "^3.2.0",
     "inquirer": "^3.3.0",
+    "log-symbols": "^2.1.0",
     "opn": "^5.1.0",
     "ora": "^1.3.0",
     "postcss": "^5.2.18",
