--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -15,10 +15,12 @@
     "access": "public"
   },
   "dependencies": {
+    "configstore": "^3.1.1",
     "fs-extra": "^4.0.2",
     "gh-got": "^6.0.0",
     "git-pull-or-clone": "^1.1.0",
     "is-git-url": "^1.0.0",
+    "is-online": "^7.0.0",
     "mkdirp": "^0.5.1",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
