--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -17,13 +17,12 @@
   "dependencies": {
     "configstore": "^3.1.1",
     "fs-extra": "^4.0.2",
-    "gh-got": "^6.0.0",
     "git-pull-or-clone": "^1.1.0",
+    "got": "^8.0.1",
     "is-git-url": "^1.0.0",
     "is-online": "^7.0.0",
     "mkdirp": "^0.5.1",
     "request": "^2.83.0",
-    "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
     "upath": "^1.0.0",
     "util.promisify": "^1.0.0"
