--- a/packages/accord/package.json
+++ b/packages/accord/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pingy/accord",
   "description": "A unified interface for compiled languages and templates in JavaScript",
-  "version": "0.29.0",
+  "version": "1.0.0",
   "author": "Jeff Escalante",
   "bugs": "https://github.com/jescalan/accord",
   "dependencies": {
@@ -63,8 +63,8 @@
     "stylus": "^0.54.5",
     "swig": "^1.4.2",
     "toffee": "^0.1.13",
-    "typescript-compiler": "^1.4.1",
-    "typescript": "^2.6"
+    "typescript": "^2.6",
+    "typescript-compiler": "^1.4.1"
   },
   "homepage": "https://github.com/jescalan/accord",
   "keywords": [
