--- a/packages/export/package.json
+++ b/packages/export/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@pingy/export",
   "version": "5.0.5",
-  "description": "Compile static site for production (with sourcemaps), auto-compiles files like `app.coffee -> app.js`",
+  "description":
+    "Compile static site for production (with sourcemaps), auto-compiles files like `app.coffee -> app.js`",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --timeout 15000",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@pingy/compile": "^6.3.1",
     "checkdir": "^1.0.0",
+    "fs-extra": "^5.0.0",
     "micromatch": "^3.1.0",
     "mkdirp": "^0.5.1",
     "path-complete-extname": "^0.1.0",
@@ -41,7 +43,7 @@
     "rimraf": "^2.6.2",
     "through2": "^2.0.0",
     "upath": "^1.0.0",
-    "when": "^3.7.4"
+    "util.promisify": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
