--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@pingy/compile": "^6.3.1",
     "csserror": "^2.0.2",
+    "filewatcher": "^3.0.1",
     "fs-extra": "^4.0.2",
     "is-absolute": "^1.0.0",
     "jserror": "^1.0.0",
