--- a/packages/export/package.json
+++ b/packages/export/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@pingy/export",
   "version": "5.0.5",
-  "description":
-    "Compile static site for production (with sourcemaps), auto-compiles files like `app.coffee -> app.js`",
+  "description": "Compile static site for production (with sourcemaps), auto-compiles files like `app.coffee -> app.js`",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --timeout 15000",
@@ -36,13 +35,13 @@
     "@pingy/compile": "^6.3.1",
     "checkdir": "^1.0.0",
     "fs-extra": "^5.0.0",
-    "micromatch": "^3.1.0",
+    "micromatch": "^3.1.5",
     "mkdirp": "^0.5.1",
     "path-complete-extname": "^0.1.0",
     "readdirp": "2.0.1",
     "rimraf": "^2.6.2",
     "through2": "^2.0.0",
-    "upath": "^1.0.0",
+    "upath": "^1.0.2",
     "util.promisify": "^1.0.0"
   },
   "devDependencies": {
@@ -50,8 +49,8 @@
     "babel-preset-es2015": "^6.14.0",
     "coffee-script": "^1.12.7",
     "jade": "^1.11.0",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "stylus": "^0.54.5",
-    "unexpected": "^10.36.0"
+    "unexpected": "^10.36.2"
   }
 }
