--- a/packages/compile/package.json
+++ b/packages/compile/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@pingy/compile",
   "version": "6.3.1",
-  "description": "A file reader that promises to translate non-web assets to web assets given the available transpilers, sourcemaps and all",
-  "main": "lib/baby-tolk.js",
-  "files": [
-    "lib"
-  ],
+  "description":
+    "A file reader that promises to translate non-web assets to web assets given the available transpilers, sourcemaps and all",
+  "main": "lib/compile.js",
+  "files": ["lib"],
   "scripts": {
     "lint": "jshint .",
     "test": "mocha",
-    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- --reporter dot",
+    "coverage":
+      "istanbul cover ./node_modules/mocha/bin/_mocha -- --reporter dot",
     "travis": "npm run coverage"
   },
   "engines": {
