--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -3,9 +3,7 @@
   "version": "11.0.0",
   "description": "Scaffold a Pingy project from Github or local filesystem",
   "main": "index.js",
-  "files": [
-    "index.js"
-  ],
+  "files": ["index.js"],
   "scripts": {
     "test": "preview && mocha"
   },
