--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@pingy/cli",
   "version": "0.12.1",
-  "description": "The Simple Frontend Build Tool. No Configuration, No Plugins. ",
+  "description":
+    "The Simple Frontend Build Tool. No Configuration, No Plugins. ",
   "main": "index.js",
   "keywords": [
     "frontend",
@@ -29,34 +30,23 @@
     "brunch"
   ],
   "dependencies": {
-    "@pingy/export": "^5.0.5",
+    "@pingy/core": "^1.0.0",
     "@pingy/init": "^7.1.0",
-    "@pingy/instant": "^3.3.0",
-    "@pingy/middleware": "^4.2.1",
     "@pingy/scaffold": "^11.0.0",
-    "@pingy/scaffold-middleware": "^1.0.0",
     "@pingy/scaffold-primitive": "^3.0.0",
-    "autoprefixer": "^6.7.7",
     "chalk": "^2.3.0",
     "colors": "^1.1.2",
-    "commander": "^2.11.0",
+    "commander": "^2.13.0",
     "configstore": "^3.1.1",
-    "connect": "^3.6.5",
     "cross-spawn": "^5.1.0",
-    "express": "^4.16.2",
-    "express-autoprefixer": "^5.3.0",
-    "find-up": "^2.1.0",
     "get-port": "^3.2.0",
     "inquirer": "^3.3.0",
     "log-symbols": "^2.1.0",
-    "opn": "^5.1.0",
+    "opn": "^5.2.0",
     "ora": "^1.3.0",
-    "postcss": "^5.2.18",
-    "semver": "^5.4.1",
-    "serve-static": "^1.13.1",
-    "server-destroy": "^1.0.1",
-    "tree-from-paths": "^1.0.0",
-    "upath": "^1.0.0"
+    "semver": "^5.5.0",
+    "tree-from-paths": "^1.1.0",
+    "upath": "^1.0.2"
   },
   "devDependencies": {
     "child-process-promise": "^2.2.1",
@@ -66,7 +56,7 @@
     "mocha": "^4.0.1",
     "node-fetch": "^1.7.3",
     "rimraf": "^2.6.2",
-    "unexpected": "^10.36.1",
+    "unexpected": "^10.36.2",
     "unexpected-webdriver": "^2.0.0"
   },
   "scripts": {
