--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@pingy/cli",
-  "version": "0.12.1",
-  "description":
-    "The Simple Frontend Build Tool. No Configuration, No Plugins. ",
+  "version": "0.12.2",
+  "description": "The Simple Frontend Build Tool. No Configuration, No Plugins. ",
   "main": "index.js",
   "keywords": [
     "frontend",
@@ -30,9 +29,9 @@
     "brunch"
   ],
   "dependencies": {
-    "@pingy/core": "^1.0.0",
+    "@pingy/core": "^1.0.1",
     "@pingy/init": "^7.1.0",
-    "@pingy/scaffold": "^11.0.0",
+    "@pingy/scaffold": "^11.0.1",
     "@pingy/scaffold-primitive": "^3.0.0",
     "chalk": "^2.3.0",
     "colors": "^1.1.2",
