--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@pingy/scaffold",
-  "version": "11.0.0",
+  "version": "11.0.1",
   "description": "Scaffold a Pingy project from Github or local filesystem",
   "main": "index.js",
-  "files": ["index.js"],
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "preview && mocha"
   },
